# shepp-logan-afdps

./: .gitignore  README.md  pyproject.toml
src/core/advanced_models/: ddpm.py  layers.py  layerspp.py  ncsnpp.py  ncsnv2.py  score_unet.py  up_or_down_sampling.py  utils.py
src/core/basic_unet/: score_unet.py
src/scripts/: generate_dataset.py  preview_beautiful_phantoms.py
src/sdes/: edm_sde.py  sde.py
src/shepp_logan_afdps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training/: checkpointing.py  datasets.py  edm_loss.py  ema.py  losses.py  sampling.py  train_score.py
src/training/configs/: config.py  default_configs.py
src/training_lite/: README.md
