[project]
name = "shepp-logan-afdps"
version = "0.1.0"
description = "Testing afdps on Shepp Logan dataset"
authors = [
    {name = "Jonathan Ma", email = "johnma@udel.edu"},
]
dependencies = ["torch>=2.7.1", "cmocean>=4.0.3", "matplotlib>=3.10.3", "numpy>=2.3.1", "scikit-image>=0.25.2", "tqdm>=4.67.1", "wandb>=0.21.0", "scipy>=1.16.0", "ml-collections>=1.1.0", "torchvision>=0.22.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "shepp-logan-afdps"}

[tool.pdm]
package-dir = {"" = "src"}

[tool.pdm.build]
include = ["src/**/*.py"]