[project]
name = "shepp-logan-afdps"
version = "0.1.0"
description = "Testing afdps on Shepp Logan dataset"
authors = [
    {name = "Jonathan Ma", email = "johnma@udel.edu"},
]
dependencies = ["torch>=2.3.0", "cmocean>=4.0.3", "matplotlib>=3.9.4",
"numpy>=2.0.2", "scikit-image>=0.24.0", "tqdm>=4.67.1", "wandb>=0.21.0",
"scipy>=1.13.1", "ml-collections>=0.1.1", "torchvision>=0.22.1", "pip>=25.1.1", "ninja>=1.11.1.4"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "shepp-logan-afdps"}

[tool.pdm]
package-dir = {"" = "src"}

[tool.pdm.build]
include = ["src/**/*.py"]